--- a/cv.html
+++ b/cv.html
@@ -9,7 +9,7 @@
 	<body>
 		<table cellspacing="20">
 			<tr>
-				<td><img src = "C:\Users\Prithvi\Downloads\IMG_20220520_204327.jpg" alt = "prithvi's profile picture"></td>
+				<td><img src = "IMG_20220520_204327.jpg" alt = "prithvi's profile picture"></td>
 				<td><h1>Prithvi Singh Chohan</h1>
 		<p><a href="https://www.linkedin.com/in/prithvi-singh-chohan-278a53208/">Sophomore</a> studying <b>Engineering Physics</b> at DTU</p>
 		<p>My focus is on digital system design and IoT and actively learning WebDeV</p></td>
